complete details items

--- a/src/pages/home/vendor.html
+++ b/src/pages/home/vendor.html
@@ -21,5 +21,39 @@
   <ion-card-content>{{vendor.address}}</ion-card-content>
 </ion-card>
 
+<ion-card>
+  <ion-card-header ion-text color="primary">Tel</ion-card-header>
+  <ion-card-content>{{vendor.tel}}</ion-card-content>
+</ion-card>
+
+<ion-card>
+  <ion-card-header ion-text color="primary">Fax</ion-card-header>
+  <ion-card-content>{{vendor.fax}}</ion-card-content>
+</ion-card>
+
+<ion-card>
+  <ion-card-header ion-text color="primary">Mobile</ion-card-header>
+  <ion-card-content>{{vendor.mob}}</ion-card-content>
+</ion-card>
+
+<ion-card>
+  <ion-card-header ion-text color="primary">Contact</ion-card-header>
+  <ion-card-content>{{vendor.contact}}</ion-card-content>
+</ion-card>
+
+<ion-card>
+  <ion-card-header ion-text color="primary">Job</ion-card-header>
+  <ion-card-content>{{vendor.job}}</ion-card-content>
+</ion-card>
+
+<ion-card>
+  <ion-card-header ion-text color="primary">Email</ion-card-header>
+  <ion-card-content><a href="mailto:{{vendor.email}}">{{vendor.email}}</a></ion-card-content>
+</ion-card>
+
+<ion-card>
+  <ion-card-header ion-text color="primary">Website</ion-card-header>
+  <ion-card-content>{{vendor.website}}</ion-card-content>
+</ion-card>
 
 </ion-content>
